--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 :root {
-  --pimary-color: #c72727;
+  --primary-color: #c72727;
   --secondary-color: #f99500;
   --light-color: #f3f3f3;
   --dark-color: #333;
